# csc-validator-be-903

./: .breakpoints  .gitignore  .mailmap  .pre-commit-config.yaml  .qwj4puhq8ivo998497350~  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  files_failed.json  files_failed.py  humans.txt  offlinedebug.py  pyproject.toml  rpc_main.py  setup.py  split.py  tool_explanation.pptx  tranform_tests.py  transform_INT_rules.py  transform_rules.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report--inaccurate-validation-check.md
.github/workflows/: linting.yaml  python-publish.yml  run-tests.yml
.qlacref/: id_rsa.pub
documentation/: .mailmap  humans.txt
documentation/debug_n_repo_transform_scripts/: create-validation-report.py  create_postcode_db.py  offlinedebug.py  running 903 in codespaces.txt  split.py  tranform_tests.py  transform_INT_rules.py  transform_rules.py
lac_validator/: __main__.py  config.py  datastore.py  fixtures.py  ingress.py  lac_validator.py  lac_validator_class.py  report.py  ruleset.py  types.py  utils.py
lac_validator/rule_engine/: __api.py  __init__.py  __registry.py
lac_validator/rules/: rule_utils.py  ruleset_utils.py
lac_validator/rules/lac2022_23/: __init__.py  rule_1000.py  rule_1001.py  rule_1002.py  rule_1003.py  rule_1004.py  rule_1005.py  rule_1006.py  rule_1007.py  rule_1008.py  rule_1009.py  rule_101.py  rule_1010.py  rule_1011.py  rule_1012.py  rule_1014.py  rule_1015.py  rule_102.py  rule_103.py  rule_104.py  rule_105.py  rule_112.py  rule_113.py  rule_114.py  rule_115.py  rule_116.py  rule_117.py  rule_118.py  rule_119.py  rule_120.py  rule_131.py  rule_132.py  rule_133.py  rule_134.py  rule_141.py  rule_142.py  rule_143.py  rule_144.py  rule_145.py  rule_146.py  (+256 more)
lac_validator/rules/lac2023_24/: __init__.py  rule_1016.py  rule_174.py  rule_217t.py  rule_218.py  rule_221.py  rule_222.py  rule_230.py  rule_347.py  rule_370.py  rule_371.py  rule_503A.py  rule_503B.py  rule_503C.py  rule_503D.py  rule_503E.py  rule_503F.py  rule_503G.py  rule_503H.py  rule_503J.py  rule_SW01STG1.py  rule_SW02STG1.py  rule_SW03STG1.py  rule_SW04STG1.py  rule_SW05STG1.py  rule_SW06STG2.py  (+10 more)
output_data/: 903_2023_24_rule_info.csv  903_2024_25_rule_info.csv  lac2024_25_rule_info.csv
scripts/: add_issues.py  check_ch_scp_files.py  create-validation-report.py  create_postcode_db.py  offlinedebug.py
tests/: conftest.py  test_datastore.py  test_ingress.py  test_integration.py  test_report.py  test_types.py  test_utils.py  test_validators.py
tests/fake_data/: DoLo.csv  ad1.csv  ch_fake.xlsx  combined_scp_ch_fake.xlsx  episodes.csv  fake_903.xml  header.csv  missing.csv  oc2.csv  oc3.csv  placed_for_adoption.csv  placed_for_adoption_errors.csv  postcodes_short.csv  previous_permanence.csv  reviews.csv  scp_ch_2025_fake.xlsx  scp_fake.xlsx  scpch_assisted.xlsx  sw_episodes.csv  uasc.csv
tests/reports/: child_summary.json
validator903/: __init__.py  ad1.csv  api.py  config.py  datastore.py  ingress.py  placed_for_adoption.csv  report.py  tinkering.py  trying_things.py  types.py  utils.py  validator.py  validators.py  xml-csv-convert.py.py
validator903/validators/: __init__.py  rule_1000.py  rule_1001.py  rule_1002.py  rule_1003.py  rule_1004.py  rule_1005.py  rule_1006.py  rule_1007.py  rule_1008.py  rule_1009.py  rule_101.py  rule_1010.py  rule_1011.py  rule_1012.py  rule_1014.py  rule_1015.py  rule_102.py  rule_103.py  rule_104.py  rule_105.py  rule_112.py  rule_113.py  rule_114.py  rule_115.py  rule_116.py  rule_117.py  rule_118.py  rule_119.py  rule_120.py  rule_131.py  rule_132.py  rule_133.py  rule_134.py  rule_141.py  rule_142.py  rule_143.py  rule_144.py  rule_145.py  rule_146.py  (+249 more)
(+360 files in other folders)
