[tool.poetry]
name = "quality-lac-data-validator"
version = "0.2.0-alpha.8"
description = "Shared module for validating the ruleset on the SSDA903 census using DfE rules."
authors = [
    "Mark Waddoups <mark.waddoups@socialfinance.org.uk>",
    "Michael Ogunkolade <michael.ogunkolade@socialfinance.org.uk>",
    "Kaj Siebert <kaj.siebert@socialfinance.org.uk>",
    "Tambe Tabitha Achere <tambe.tabitha@socialfinance.org.uk>",
]
repository = "https://github.com/SocialFinanceDigitalLabs/quality-lac-data-beta-validator"
license = "MIT"
readme = "README.md"
packages = [
    { include = "validator903" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.0.5" # These are fixed to match versions available for pyodide
numpy = "1.17.5"
openpyxl = "^3.0.9"
quality-lac-data-ref-authorities = ">=2021.4"
quality-lac-data-ref-postcodes = ">=2021.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
