[tool.poetry]
name = "lac-validator"
version = "1.0.3"
description = "Shared module for validating the ruleset on the SSDA903 census using DfE rules."
authors = [
    "Mark Waddoups <mark.waddoups@socialfinance.org.uk>",
    "Michael Ogunkolade <michael.ogunkolade@socialfinance.org.uk>",
    "Kaj Siebert <kaj.siebert@socialfinance.org.uk>",
    "Tambe Tabitha Achere <tambe.tabitha@socialfinance.org.uk>",
]
repository = "https://github.com/SocialFinanceDigitalLabs/quality-lac-data-beta-validator"
license = "MIT"
readme = "README.md"
packages = [
    { include = "rpc_main.py" },
    { include = "lac_validator/**/*.py"  }	
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "< 2.0.0"
openpyxl = "^3.0.9"
quality-lac-data-ref-authorities = ">=2021.4"
quality-lac-data-ref-postcodes = ">=2021.8.1"
xlrd = "^2.0.1"
click = "^8.1.3"
prpc-python = "^0.9.2"
click-log = "^0.4.0"
rich = "^13.4.1"
pre-commit = "^3.3.3"
ruff = "^0.0.277"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
coverage = "^6.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
