[tool.poetry]
name = "csc-validator-be-903"
version = "0.1.11"
description = "Shared module for validating SSDA903 census data using DfE rules."
authors = ["Michael Ogunkolade <michael.ogunkolade@socialfinance.org.uk>", "Kaj Siebert <kaj.siebert@socialfinance.org.uk>", "Tambe Tabitha Achere <tambe.tabitha@socialfinance.org.uk>", "Mark Waddoups <mark.waddoups@socialfinance.org.uk>", "DatatoInsight's children's social care analyst community <datatoinsight.enquiries@gmail.com>"]
repository = "https://github.com/data-to-insight/csc-validator-be-903"
license = "MIT"
readme = "README.md"
packages = [
    { include = "rpc_main.py" },
    { include = "lac_validator/**/*.py"  }	
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "< 2.0.0"
numpy = "<1.25.0"
openpyxl = "^3.0.9"
quality-lac-data-ref-authorities = ">=2021.4"
quality-lac-data-ref-postcodes = ">=2021.8.1"
xlrd = "^2.0.1"
click = "^8.1.3"
prpc-python = "^0.9.2"
click-log = "^0.4.0"
rich = "^13.4.1"
pre-commit = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
coverage = "^6.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
